# Agentic-AI-Projects

./: .gitignore  README.md  Rag_assistant.py  batch.json  chat_with_pdf.py  conversational_chatbot.py  data_analyst_agent.py  multilingual_assistant.py  pyproject.toml  requirements.txt  research_summarizer.py  voice_assistant.py
